Fixed layout problem in IE

--- a/intermine/webapp/main/resources/webapp/css/query.css
+++ b/intermine/webapp/main/resources/webapp/css/query.css
@@ -64,8 +64,8 @@ div.modelbrowse {
 }
   
 #rightColumn {
-  margin-left:500px;
-  width:500px;
+  margin-left:505px;
+  width:495px;
 }
 
 /* Outer Joins diagram */
